# ChangeLog for sys-apps/dbus
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.184 2007/02/09 22:27:05 eroyf Exp $

  09 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> dbus-1.0.2.ebuild:
  Stable on MIPS; bug #154522

  09 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> dbus-1.0.2.ebuild:
  Stable on Alpha, bug 154522.

  06 Feb 2007; Doug Goldstein <cardoe@gentoo.org> dbus-0.62-r2.ebuild:
  Removing keywords for ebuilds that are no longer supported. alpha and mips
  are on unsupported versions still

  29 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> dbus-1.0.2.ebuild:
  Stable on sparc wrt #154522

  23 Jan 2007; Jeroen Roovers <jer@gentoo.org> dbus-1.0.2.ebuild:
  Stable for HPPA (bug #154522).

  22 Jan 2007; Olivier Crête <tester@gentoo.org> dbus-1.0.2.ebuild:
  Stable on amd64 per bug #154522

  21 Jan 2007; Andrej Kacian <ticho@gentoo.org> dbus-1.0.2.ebuild:
  Stable on x86, bug #154522.

  21 Jan 2007; Markus Rothe <corsair@gentoo.org> dbus-1.0.2.ebuild:
  Stable on ppc64; bug #154522

  21 Jan 2007; nixnut <nixnut@gentoo.org> dbus-1.0.2.ebuild:
  Stable on ppc wrt bug 154522

  08 Jan 2007; Roy Marples <uberlord@gentoo.org> files/dbus.init-1.0:
  init script needs localmount so it can create a pidfile correctly.
  init script is after bootmisc so the pidfile doesn't get erased in a 
  parallel boot.

  05 Jan 2007; Saleem Abdulrasool <compnerd@gentoo.org> dbus-0.62-r2.ebuild:
  fix up debug codepaths for qt bindings (bug #160112), disable qt4 on mips

  05 Jan 2007; Doug Goldstein <cardoe@gentoo.org> dbus-0.61-r1.ebuild,
  dbus-0.62-r2.ebuild, dbus-1.0.2.ebuild:
  remove debug.eclass and add debug USE flag

  18 Dec 2006; Bryan Østergaard <kloeri@gentoo.org> Manifest:
  Fix broken digest. Thanks to Caster reporting it in #gentoo-bugs.

  17 Dec 2006; Alexander H. Færøy <eroyf@gentoo.org>
  +files/dbus-0.60-decls-ansi-c.patch,