@@ -1,0 +1,3 @@
+MD5 0552a9b54beb4a044951b7cdbc8fc855 dbus-1.0.2.tar.gz 1400278
+RMD160 d5eddfb058c4c026d4a9f091ad90abcc6e54861a dbus-1.0.2.tar.gz 1400278
+SHA256 8a004125f58512a69575f21f105aead0d1217fce9cb54cbafeac06b4be28c6ca dbus-1.0.2.tar.gz 1400278
