@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/dbus
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.184 2007/02/09 22:27:05 eroyf Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.185 2007/02/23 11:00:28 uberlord Exp $
+
+*dbus-1.0.2-r1 (23 Feb 2007)
+
+  23 Feb 2007; Roy Marples <uberlord@gentoo.org> files/dbus.init-1.0,
+  +dbus-1.0.2-r1.ebuild:
+  Bump for a non bash init script.
 
   09 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> dbus-1.0.2.ebuild:
   Stable on MIPS; bug #154522
